--- a/render.yaml
+++ b/render.yaml
@@ -34,8 +34,8 @@ services:
       - key: SEND_READ
         value: 'false'
       - key: SESSION_ID
-        sync: false
+        sync: true
       - key: PORT
         value: '3000'
       - key: DATABASE_URL
-        sync: false
+        sync: true
